Fix search button and scrollbar on home.html

--- a/css/style.css
+++ b/css/style.css
@@ -148,12 +148,12 @@ body {
   border: 0.1rem solid #d2d3d3;
   padding: 1rem;
   border-radius: 0.5pc;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
   background-color: rgba(237, 239, 240, 0.5);
   height: 2.5rem;
   color: #24292d;
   font-size: 16px;
-  margin: 0;
-  margin-bottom: 0.5rem;
 }
 
 .buttons {
@@ -241,7 +241,7 @@ body {
 	padding: 0;
 	border-collapse: collapse;
 	height: 82%;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 td, th {
